# snazzy

./: .gitignore  CLAUDE.md  README.md  environment.sh  pyproject.toml  tox.ini
debian/: changelog  control  copyright
lib/snazzy/: appmaker.py  cli.py  component.py  componentmaker.py  copyfiles.py  cssmaker.py  error.py  logformatter.py  preptask.py  sitemaker.py  task.py
