[project]
name = "snazzy"
version = "0.1.0"
description = "The low-npm frontend framework"

authors = [
    {name = "Tobias Koch", email = "tobias.koch@gmail.com"},
]

dependencies = [
    "pytidylib",
    "lxml"
]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {'' = 'lib'}
